# FDC_Scheduler

./: .dockerignore  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUILD_STATUS.md  CMakeLists.txt  Dockerfile  LICENSE  MIGRATION_V2.md  RAILWAY_AI_INTEGRATION_SUMMARY.md  README.md  build.sh  docker-compose.yml  docker-helper.sh
.github/: BADGES.md
.github/workflows/: ci.yml  code-quality.yml  docker.yml  release.yml
cmake/: fdc_scheduler-config.cmake.in
docs/: CI_CD.md  DOCKER.md  PERFORMANCE_PROFILING.md  RAILML_SUPPORT.md  RAILWAY_AI_RESOLUTION.md  json_api.md
examples/: CMakeLists.txt  basic_example.cpp  benchmark.cpp  config_demo.cpp  database_demo.cpp  full_example.cpp  json_api_example.cpp  logging_demo.cpp  railml_example.cpp  railway_ai_integration_example.cpp  realtime_demo.cpp  rest_api_demo.cpp  route_rerouting_demo.cpp  simple_example.cpp  speed_optimization_demo.cpp  stress_test_conflicts.cpp  telemetry_demo.cpp  test_advanced.cpp  test_k_paths.cpp  test_railway_ai_conflicts.json  timetable_optimizer.cpp
include/: fdc_scheduler.hpp
include/fdc_scheduler/: config_manager.hpp  conflict_detector.hpp  database.hpp  edge.hpp  json_api.hpp  logger.hpp  node.hpp  node_type.hpp  profiler.hpp  railml_exporter.hpp  railml_parser.hpp  railway_ai_resolver.hpp  railway_network.hpp  realtime_optimizer.hpp  rest_api.hpp  route_optimizer.hpp  schedule.hpp  serialization.hpp  speed_optimizer.hpp  telemetry.hpp  track_type.hpp  train.hpp  train_type.hpp
python/: CMakeLists.txt  README.md  bindings.cpp  example.py  test_bindings.py  test_simple.py
src/: config_manager.cpp  conflict_detector.cpp  database.cpp  edge.cpp  fdc_scheduler.cpp  json_api.cpp  json_api_wrapper.cpp  json_api_wrapper.cpp.minimal  logger.cpp  node.cpp  railml_exporter.cpp  railml_parser.cpp  railway_ai_resolver.cpp  railway_network.cpp  realtime_optimizer.cpp  rest_api.cpp  route_optimizer.cpp  schedule.cpp  speed_optimizer.cpp  telemetry.cpp  train.cpp
tests/: CMakeLists.txt  test_config_manager.cpp  test_conflict_detector.cpp  test_database.cpp  test_edge.cpp  test_heavy_scenarios.cpp  test_json_api.cpp  test_logger.cpp  test_node.cpp  test_pathfinding.cpp  test_railway_network.cpp  test_schedule.cpp  test_telemetry.cpp  test_train.cpp
