# Simple example using FDC_Scheduler wrapper
add_executable(simple_example simple_example.cpp)
add_executable(full_example full_example.cpp)
add_executable(test_k_paths test_k_paths.cpp)
add_executable(test_advanced test_advanced.cpp)
target_link_libraries(simple_example PRIVATE fdc_scheduler)
target_link_libraries(full_example PRIVATE fdc_scheduler)
target_link_libraries(test_k_paths PRIVATE fdc_scheduler)
target_link_libraries(test_advanced PRIVATE fdc_scheduler)
