# Simple example using FDC_Scheduler wrapper
add_executable(simple_example simple_example.cpp)
add_executable(full_example full_example.cpp)
add_executable(test_k_paths test_k_paths.cpp)
add_executable(test_advanced test_advanced.cpp)
add_executable(railway_ai_integration_example railway_ai_integration_example.cpp)
add_executable(stress_test_conflicts stress_test_conflicts.cpp)
add_executable(timetable_optimizer timetable_optimizer.cpp)
add_executable(railml_example railml_example.cpp)
add_executable(benchmark benchmark.cpp)
add_executable(route_rerouting_demo route_rerouting_demo.cpp)
add_executable(speed_optimization_demo speed_optimization_demo.cpp)
add_executable(realtime_demo realtime_demo.cpp)
add_executable(rest_api_demo rest_api_demo.cpp)
add_executable(config_demo config_demo.cpp)
add_executable(logging_demo logging_demo.cpp)

target_link_libraries(simple_example PRIVATE fdc_scheduler)
target_link_libraries(full_example PRIVATE fdc_scheduler)
target_link_libraries(test_k_paths PRIVATE fdc_scheduler)
target_link_libraries(test_advanced PRIVATE fdc_scheduler)
target_link_libraries(railway_ai_integration_example PRIVATE fdc_scheduler)
target_link_libraries(stress_test_conflicts PRIVATE fdc_scheduler)
target_link_libraries(timetable_optimizer PRIVATE fdc_scheduler)
target_link_libraries(railml_example PRIVATE fdc_scheduler)
target_link_libraries(benchmark PRIVATE fdc_scheduler)
target_link_libraries(route_rerouting_demo PRIVATE fdc_scheduler)
target_link_libraries(speed_optimization_demo PRIVATE fdc_scheduler)
target_link_libraries(realtime_demo PRIVATE fdc_scheduler)
target_link_libraries(rest_api_demo PRIVATE fdc_scheduler)
target_link_libraries(config_demo PRIVATE fdc_scheduler)
target_link_libraries(logging_demo PRIVATE fdc_scheduler)
