# Tests for FDC_Scheduler
# TODO: Add unit tests

# Placeholder to prevent CMake errors
# Uncomment when tests are ready

# find_package(GTest REQUIRED)
# 
# add_executable(fdc_scheduler_tests
#     test_conflict_detector.cpp
#     test_json_api.cpp
#     test_railway_network.cpp
# )
# 
# target_link_libraries(fdc_scheduler_tests PRIVATE 
#     fdc_scheduler 
#     GTest::GTest 
#     GTest::Main
# )
# 
# gtest_discover_tests(fdc_scheduler_tests)

message(STATUS "Tests not yet implemented - placeholder CMakeLists.txt")
